--- a/assets/css/partials/_inputs.scss
+++ b/assets/css/partials/_inputs.scss
@@ -18,7 +18,7 @@
 
 .input-text-2{
   border-radius: 6px;
-  padding: 8px 10px; 
+  padding: 10px 12px; 
   width: 80%;   
   background-color: transparent;
   border-style: none;
@@ -29,6 +29,7 @@
   &::placeholder{color: rgba(255, 255, 255, 0.5);}
   &:focus{
     border-bottom: 2px solid $button-color;
+    background-color: #111;
     &::placeholder{color: rgba(255, 255, 255, 0.6);}
   }
 }
