--- a/Components/Buttons/BackgroundTransitions/slide-top-bottom.css
+++ b/Components/Buttons/BackgroundTransitions/slide-top-bottom.css
@@ -41,4 +41,4 @@
 .slide-top-bottom:hover::before, .slide-top-bottom:hover::after {
   height: 50%;
 }
-/*# sourceMappingURL=.slide-top-bottom.css.map */
+/*# sourceMappingURL=slide-top-bottom.css.map */
